--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formsy-react-components",
+  "name": "formsy-react-components-marketgames",
   "version": "1.0.0-alpha.1",
   "description": "A set of React JS components for use in a formsy-react form. Markup adheres to Bootstrap structure.",
   "scripts": {
